--- a/Style/global.css
+++ b/Style/global.css
@@ -4,3 +4,32 @@
     box-sizing: border-box;
 }
 
+:root {
+    /* Pricipais */
+    --red-color:#E3646E;
+    --purple-color:#BB72E9;
+    --blue-color:#3996DB;
+    --green-color:#82BC4F;
+    --yellow-color:#EABD5F;
+
+    /* Base */
+    --gray-100:#0D0E11;
+    --gray-200:#16181D;
+    --gray-300:#292C34;
+    --gray-400:#878EA1;
+    --gray-500:#C0C4CE;
+    --gray-600:#E2E4E9;
+
+    /* Fontes */
+    --font-family-asap: "Asap", sans-serif;
+    --title-lg: bold 56px/120% var(--font-family-asap);
+    --title-md: bold 24px/120% var(--font-family-asap);
+    --title-ms: bold 16px/120% var(--font-family-asap);
+
+    --font-family-inconsolata: "Inconsolata", monospace;
+    --subtitulo: 20px/120% var(--font-family-inconsolata);
+
+    --font-family-mavenpro: "Maven Pro", sans-serif;
+    --text-md: 16px/140% var(--font-family-mavenpro);
+    --text-sm: 14/140% var(--font-family-mavenpro);
+}
