--- a/Style/global.css
+++ b/Style/global.css
@@ -24,7 +24,7 @@
     --font-family-asap: "Asap", sans-serif;
     --title-lg: bold 56px/120% var(--font-family-asap);
     --title-md: bold 24px/120% var(--font-family-asap);
-    --title-ms: bold 16px/120% var(--font-family-asap);
+    --title-sm: bold 16px/120% var(--font-family-asap);
 
     --font-family-inconsolata: "Inconsolata", monospace;
     --subtitulo: 20px/120% var(--font-family-inconsolata);
