--- a/Style/section.css
+++ b/Style/section.css
@@ -20,3 +20,55 @@
     }
     
 }
+
+#projetos{
+    padding-bottom: 144px;
+    
+    .grid{
+        display: grid;
+        grid-template-columns: repeat(3, 330px);
+        grid-template-rows: repeat(2, 280px);
+        gap: 24px;
+    }
+
+    .text-projetos{
+        text-align: center;
+        h2{
+            font: var(--title-md);
+            color: var(--gray-600);
+            padding-bottom:56px;
+        }
+        h3{
+            font: var(--subtitulo);
+            color: var(--red-color);
+            padding: 72px 0 8px 0;
+        }
+    }
+
+    img{
+        width: 330px;
+        border-radius: 18px;
+        padding: 12px;
+    }
+
+    .aprsentação{
+        background-color: var(--gray-300);
+        border-radius: 12px;
+        width: 330px;
+        height: 280px;
+
+        div{
+            padding: 7px 12px 12px 12px;
+            place-content: center
+        }
+
+        h2{
+            color: var(--gray-600);
+            font:var(--title-sm)
+        }
+
+        p{
+            font: var(--text-sm);
+        }
+    }
+}
