--- a/Style/utility.css
+++ b/Style/utility.css
@@ -30,3 +30,17 @@
         padding-bottom:56px;
     }
 }
+
+.padding-200{
+    h2{
+        padding-bottom:200px;
+    }
+}
+
+.absolute{
+    position: absolute;
+}
+
+.relative{
+    position: relative;
+}
