--- a/Style/global.css
+++ b/Style/global.css
@@ -37,14 +37,13 @@
 body {
     color: var(--gray-400);
     background-color: var(--gray-200);
-    background-image: url(../Asset/Background_Intro.png);
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 100%;
 }
 
-img{
-    max-width: 100%;
+a{
+    text-decoration: none;
+    color: var(--gray-500);
+    font: var(--text-md);
+    font-weight: 500;
 }
 
 h1{
@@ -84,5 +83,11 @@ p{
 
 .container {
     max-width: 1040px;
+    margin-inline: auto;
+}
+
+.container-img{
+    width: 1366px;
+    height: 750px;
     margin-inline: auto;
 }
