--- a/Style/global.css
+++ b/Style/global.css
@@ -37,13 +37,21 @@
 body {
     color: var(--gray-400);
     background-color: var(--gray-200);
+    display: flex;
+
 }
 
-a{
-    text-decoration: none;
-    color: var(--gray-500);
-    font: var(--text-md);
-    font-weight: 500;
+footer{
+    background: url("../Asset/Background_Contacts.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 1366px;
+    height: 750px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 h1{
@@ -86,7 +94,3 @@ p{
     margin-inline: auto;
 }
 
-.container-img{
-    width: 1366px;
-    margin-inline: auto;
-}
