--- a/Style/header.css
+++ b/Style/header.css
@@ -1,3 +1,12 @@
+header{
+    background: url("../Asset/Background_Intro.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 1366px;
+    height: 750px;
+}
+
 .top{
     
     section:nth-child(1){
@@ -15,6 +24,7 @@
 
 
 #avatar{
+
     padding-top: 120px;
     padding-bottom: 56px;
     width: 112px;
@@ -52,7 +62,6 @@
 }
 
 #title-text{
-    padding-bottom: 80px;
 
     h1{
         padding-bottom: 20px;
@@ -66,6 +75,7 @@
 #tags{
     display: flex;
     gap: 16px;
+    padding-top: 80px;
 
     div:nth-child(1){
         display: flex;
@@ -149,5 +159,4 @@
 .arrow{
     padding-top: 94px;
     padding-bottom: 60.5px;
-    padding-left: 667px;
 }
